--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,15 +26,15 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="textSize">@dimen/price_size</item>
+        <item name="android:textSize">@dimen/price_size</item>
     </style>
 
     <style name="price">
-        <item name="textStyle">italic</item>
+        <item name="android:textStyle">italic</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="textSize">@dimen/price_size</item>
+        <item name="android:textSize">@dimen/price_size</item>
         <item name="android:layout_marginRight">@dimen/layout_margin</item>
     </style>
 
