--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -10,4 +10,9 @@
         android:icon="@drawable/ic_done"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/action_delete_one"
+        android:title="@string/action_delete_one"
+        app:showAsAction="never" />
+
 </menu>
