--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -15,10 +15,12 @@
 
         <ImageView
             android:id="@+id/empty_shelter_image"
-            android:layout_width="@dimen/image_size"
-            android:layout_height="@dimen/image_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:layout_margin="@dimen/layout_margin_external"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/deposit" />
+            android:src="@drawable/empty" />
 
         <TextView
             android:id="@+id/empty_title_text"
