--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -11,135 +11,145 @@
     <TextView
         android:id="@+id/overview_name"
         style="@style/title"
-        android:textSize="30sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/layout_margin_external"
+        android:textSize="30sp"
         tools:text="@string/tool_name" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/overview_image"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="@dimen/image_size"
-            android:src="@drawable/deposit"
-            android:scaleType="centerCrop"
-            />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="@dimen/layout_margin_external">
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/layout_margin"
-                android:gravity="center_horizontal">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    style="@style/price"
-                    android:textSize="25sp"
-                    android:text="@string/price" />
+                <ImageView
+                    android:id="@+id/overview_image"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/image_size"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/deposit" />
 
-                <TextView
-                    android:id="@+id/overview_price"
-                    style="@style/price"
-                    android:textSize="25sp"
-                    tools:text="@string/tool_price" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/layout_margin_external"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    style="@style/price"
-                    android:textSize="25sp"
-                    android:text="@string/dollar" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:padding="@dimen/layout_margin">
 
+                        <TextView
+                            style="@style/price"
+                            android:text="@string/price"
+                            android:textSize="25sp" />
+
+                        <TextView
+                            android:id="@+id/overview_price"
+                            style="@style/price"
+                            android:textSize="25sp"
+                            tools:text="@string/tool_price" />
+
+                        <TextView
+                            style="@style/price"
+                            android:text="@string/dollar"
+                            android:textSize="25sp" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        style="@style/quantity"
+                        android:layout_gravity="center_horizontal"
+                        android:padding="@dimen/layout_margin"
+                        android:text="@string/availability"
+                        android:textSize="23sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:padding="@dimen/layout_margin">
+
+                        <Button
+                            android:id="@+id/button_minus"
+                            style="@style/button"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:text="@string/minus" />
+
+                        <TextView
+                            android:id="@+id/overview_quantity"
+                            style="@style/quantity"
+                            android:paddingTop="@dimen/layout_margin_external"
+                            android:textSize="20sp"
+                            tools:text="@string/tool_quantity" />
+
+                        <Button
+                            android:id="@+id/button_plus"
+                            style="@style/button"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:text="@string/plus" />
+
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
             <TextView
-                style="@style/quantity"
-                android:textSize="23sp"
-                android:padding="@dimen/layout_margin"
-                android:text="@string/availability"
-                android:layout_gravity="center_horizontal"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/layout_margin"
-                android:layout_gravity="center_horizontal">
-
-                <Button
-                    android:id="@+id/button_minus"
-                    style="@style/button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:text="@string/minus"/>
+                style="@style/title"
+                android:layout_marginTop="@dimen/layout_margin_external"
+                android:text="@string/category_description" />
 
             <TextView
-                android:id="@+id/overview_quantity"
-                style="@style/quantity"
-                android:textSize="30sp"
-                tools:text="@string/tool_quantity"
-                android:padding="@dimen/layout_margin_external"/>
+                android:id="@+id/overview_description"
+                style="@style/description"
+                android:padding="@dimen/layout_margin_external"
+                android:textSize="17sp"
+                tools:text="@string/hint_description" />
 
-                <Button
-                    android:id="@+id/button_plus"
-                    style="@style/button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:text="@string/plus"/>
+            <TextView
+                style="@style/title"
+                android:layout_marginTop="@dimen/layout_margin_external"
+                android:text="@string/category_manufacturer" />
 
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/overview_manufacturer"
+                style="@style/description"
+                android:padding="@dimen/layout_margin_external"
+                android:textSize="17sp"
+                tools:text="@string/tool_manufacturer" />
 
-    <TextView
-        style="@style/title"
-        android:layout_marginTop="@dimen/layout_margin_external"
-        android:text="@string/category_description"/>
+            <TextView
+                style="@style/title"
+                android:layout_marginTop="@dimen/layout_margin_external"
+                android:text="@string/category_email" />
 
-    <TextView
-        android:id="@+id/overview_description"
-        style="@style/description"
-        android:textSize="17sp"
-        android:padding="@dimen/layout_margin_external"
-        tools:text="@string/hint_description"/>
-
-    <TextView
-        style="@style/title"
-        android:text="@string/category_manufacturer"
-        android:layout_marginTop="@dimen/layout_margin_external"/>
-
-    <TextView
-        android:id="@+id/overview_manufacturer"
-        style="@style/description"
-        android:textSize="17sp"
-        android:padding="@dimen/layout_margin_external"
-        tools:text="@string/tool_manufacturer"/>
+            <TextView
+                android:id="@+id/overview_email"
+                style="@style/description"
+                android:padding="@dimen/layout_margin_external"
+                android:textSize="17sp"
+                tools:text="@string/tool_email" />
 
         </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
     <Button
         android:id="@+id/order_button"
         style="@style/button"
         android:padding="@dimen/layout_margin_external"
-        android:text="@string/order"/>
+        android:text="@string/order" />
 
 </LinearLayout>
