--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="layout_margin">5dp</dimen>
     <dimen name="padding">3dp</dimen>
     <dimen name="layout_margin_external">10dp</dimen>
+    <dimen name="button_text">15sp</dimen>
+    <dimen name="title_size">17sp</dimen>
 
     <!-- Common margin value used throughout the app -->
     <dimen name="activity_margin">16dp</dimen>
