--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -146,10 +146,23 @@
         </LinearLayout>
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
     <Button
         android:id="@+id/order_button"
         style="@style/button"
         android:padding="@dimen/layout_margin_external"
         android:text="@string/order" />
 
+    <Button
+        android:id="@+id/overview_button_delete"
+        style="@style/button"
+        android:layout_gravity="right"
+        android:padding="@dimen/layout_margin_external"
+        android:text="@string/delete" />
+
+</LinearLayout>
 </LinearLayout>
